# pdfcodes

./: Cargo.toml  HANDOFF.md  config.example.json  data.csv  data_full.csv  manual.en.md  manual.md  manual.ro.md  manual.txt
src/: align.rs  blend.rs  color.rs  fonts.rs  geometry.rs  lib.rs  main.rs  main.rs.0  main.rs.1  main.rs.chatgpt  measure.rs  options.rs  pdf_import.rs  wasm.rs
src/assets/img/: background.tiff
src/cli/: args.rs  config.rs
src/generate/: cards.rs  contour.rs  image_bg.rs  mod.rs  ocg.rs  overlay.rs  shapes.rs
svg-wasm/: Cargo.toml
svg-wasm/src/: lib.rs  wasm.rs
tests/: spin_e2e.rs
web/: .gitignore  index.html  package-lock.json  package.json
web-preview/: _verify_pad.mjs  eslint.config.js  index.html  package-lock.json  package.json  shoot.mjs  vite.config.ts
web-preview/messages/: en.json  ro.json
web-preview/project.inlang/: settings.json
web-preview/scripts/: build-google-fonts-manifest.mjs  image-proxy.php
web-preview/src/: App.tsx  index.css
web-preview/src/assets/: google-fonts-manifest.json
web-preview/src/components/: CardCanvas.tsx  CodeSourceSection.tsx  ContourOverlay.tsx  GoogleFontPicker.tsx  ResultPanel.tsx  WizardNav.tsx  WordOverlay.tsx  fields.tsx
web-preview/src/lib/: align.test.ts  clipboardImage.test.ts  clipboardImage.ts  cmyk.test.ts  cmyk.ts  codeSource.test.ts  codeSource.ts  colorSample.test.ts  colorSample.ts  contourFootprint.test.ts  contourFootprint.ts  contourInteriorMask.ts  contourKeepRegion.test.ts  contourKeepRegion.ts  contourMask.test.ts  contourMask.ts  contourOffset.test.ts  contourOffset.ts  contourOps.ts  contourVectorImage.ts  contourVectorMask.ts  csvImport.test.ts  csvImport.ts  csvSerialize.ts  fonts.ts  formatNumber.ts  generate.ts  generateBatched.ts  generateWorker.ts  googleFonts.ts  options.ts  pdfBackground.ts  presetBundle.test.ts  presetBundle.ts  randomWords.ts  screenshot.test.ts  screenshot.ts  solidColorBackground.ts  svgBackground.test.ts  svgBackground.ts  (+6 more)
web/src/: App.tsx
web/src/components/: fields.tsx
web/src/lib/: generate.ts  options.ts  theme.ts  wasm.ts
