[package]
name = "pdfcodes"
version = "0.1.0"
edition = "2024"

[lib]
name = "pdfcodes"
crate-type = ["cdylib", "rlib"]

[dependencies]
lopdf = "0.32"
csv = "1.3"
ttf-parser = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kurbo = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
