[package]
name = "pdfcodes"
version = "0.1.0"
edition = "2024"

[lib]
name = "pdfcodes"
crate-type = ["cdylib", "rlib"]

[dependencies]
lopdf = "0.32"
csv = "1.3"
ttf-parser = "0.24"
serde = { version = "1.0", features = ["derive"] }
kurbo = "0.13"
# Only the pure-Rust PNG + JPEG codecs (no C deps, wasm32-friendly). Default
# features pull in every codec and balloon the wasm binary, so keep it minimal.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Optimise the wasm release binary for size: the image crate adds bytes, and
# this also shrinks the existing binary to absorb most of that delta. (Native
# `cargo test` uses the dev profile, so test build times are unaffected.)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
